--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,36 @@
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
-      - main
       - master
-      - develop
-name: "Build & Release"
+      - main
+
+name: Build and Release Apps
 jobs:
   build:
-    name: Build & Release
-    runs-on: windows-latest
+    name: Build Apps
+    runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
+      - name: Export Release Timestamp
+        run: echo "APP_VERSION=v$(date +'%Y.%m.%d.%H.%M.%S')" >> $GITHUB_ENV
+      - name: Checkout repository
+        uses: actions/checkout@v1
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
+          java-version: '15'
+          distribution: 'adopt'
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v1
         with:
-          flutter-version: '2.2.0'
-      - run: flutter pub get
-      # - run: flutter test
-      - run: flutter build apk --debug --split-per-abi
-      # - run: 
+          channel: 'stable'
+      - name: Install pub Dependencies
+        run: flutter pub get
+      # - name: Run Tests
+      #   run: flutter test
+      - name: Build Android App
+        run: flutter build apk --split-per-abi
+      # - name: Build iOS App
+      #   run: |
       #     flutter build ios --no-codesign
       #     cd build/ios/iphoneos
       #     mkdir Payload
@@ -32,11 +38,15 @@ jobs:
       #     ln -s ../Runner.app
       #     cd ..
       #     zip -r app.ipa Payload
-      - name: Push to Releases
-
+      # - name: Build Web App
+      #   run: |
+      #     flutter build web
+      #     cd build/web
+      #     zip -r web-app.zip .
+      - name: Release Apps
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/debug/*"
-          tag: calculator.v1.0.${{ github.run_number }}
-          token: ${{ secrets.NEW_PASS }}
-        #  token: ${{ secrets.MY_TOKEN }}
+          tag: ${{ env.APP_VERSION }}
+          name: ${{ env.APP_VERSION }}
+          token: ${{ secrets.TOKEN }}
+          artifacts: 'build/app/outputs/apk/release/*.apk'
