--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
-     buildToolsVersion '26.0.2'
+    //  buildToolsVersion '26.0.2'
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
