--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,16 +28,16 @@ jobs:
       # - name: Run Tests
       #   run: flutter test
       - name: Build Android App
-        run: flutter build apk --release --split-per-abi --scan
-      - name: Build iOS App
-        run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
+        run: flutter build apk --target-platform=android-arm --split-per-abi
+#       - name: Build iOS App
+#         run: |
+#           flutter build ios --no-codesign
+#           cd build/ios/iphoneos
+#           mkdir Payload
+#           cd Payload
+#           ln -s ../Runner.app
+#           cd ..
+#           zip -r app.ipa Payload
       # - name: Build Web App
       #   run: |
       #     flutter build web
