--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,52 +1,42 @@
 on:
+  pull_request:
+    branches:
+      - main
+      - master
   push:
     branches:
-      - master
       - main
-
-name: Build and Release Apps
+      - master
+      - develop
+name: "Build & Release"
 jobs:
   build:
-    name: Build Apps
-    runs-on: macos-latest
+    name: Build & Release
+    runs-on: windows-latest
     steps:
-      - name: Export Release Timestamp
-        run: echo "APP_VERSION=v$(date +'%Y.%m.%d.%H.%M.%S')" >> $GITHUB_ENV
-      - name: Checkout repository
-        uses: actions/checkout@v1
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
         with:
-          java-version: '15'
-          distribution: 'adopt'
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v1
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
         with:
-          channel: 'stable'
-      - name: Install pub Dependencies
-        run: flutter pub get
-      # - name: Run Tests
-      #   run: flutter test
-      - name: Build Android App
-        run: fvm flutter build apk --release --flavor production --dart-define=FLAVOR=production --target lib/main.dart --split-per-abi
-#       - name: Build iOS App
-#         run: |
-#           flutter build ios --no-codesign
-#           cd build/ios/iphoneos
-#           mkdir Payload
-#           cd Payload
-#           ln -s ../Runner.app
-#           cd ..
-#           zip -r app.ipa Payload
-      # - name: Build Web App
-      #   run: |
-      #     flutter build web
-      #     cd build/web
-      #     zip -r web-app.zip .
-      - name: Release Apps
+          flutter-version: '2.2.0'
+      - run: flutter pub get
+      # - run: flutter test
+      - run: flutter build apk --debug --target-platform=android-arm --split-per-abi
+      # - run: 
+      #     flutter build ios --no-codesign
+      #     cd build/ios/iphoneos
+      #     mkdir Payload
+      #     cd Payload
+      #     ln -s ../Runner.app
+      #     cd ..
+      #     zip -r app.ipa Payload
+      - name: Push to Releases
+
         uses: ncipollo/release-action@v1
         with:
-          tag: ${{ env.APP_VERSION }}
-          name: ${{ env.APP_VERSION }}
+          artifacts: "build/app/outputs/apk/debug/*"
+          tag: calculator.v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-          artifacts: 'build/app/outputs/apk/release/*.apk'
+        #  token: ${{ secrets.MY_TOKEN }}
