--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,32 @@
-on:
-  pull_request:
-    branches:
-      - main
-      - master
-  push:
-    branches:
-      - main
-      - master
-      - develop
-name: "Build & Release"
-jobs:
-  build:
-    name: Build & Release
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '2.2.0'
-      - run: flutter pub get
-      # - run: flutter test
-      - run: flutter build apk --debug --target-platform=android-arm --split-per-abi
-      # - run: 
-      #     flutter build ios --no-codesign
-      #     cd build/ios/iphoneos
-      #     mkdir Payload
-      #     cd Payload
-      #     ln -s ../Runner.app
-      #     cd ..
-      #     zip -r app.ipa Payload
-      - name: Push to Releases
+# This is a basic workflow to help you get started with Actions
 
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/debug/*"
-          tag: calculator.v1.0.${{ github.run_number }}
-          token: ${{ secrets.TOKEN }}
-        #  token: ${{ secrets.MY_TOKEN }}
+name: Test, Build, Release Demo app to Azure Storgae
+# name: Test, Build and Release apk
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
+on:
+  push:
+    branches: [ master ]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'dev'
+    - run: flutter pub get
+#     - name: 'Run Test(s)'
+#       run: flutter test
+    - name: 'Build Demo Apk'
+      run: flutter clean && flutter build apk --target lib/main_demo.dart --target-platform android-arm --flavor demo
+    - name: 'Upload Apk'
+      uses: wei/curl@v1
+      with:
+        args: -X POST 'https://--your-url---.com/api/UploadApk?filename=release.apk' -F file=@build/app/outputs/apk/demo/release/app-demo-release.apk
