--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,26 @@
-# This is a basic workflow to help you get started with Actions
+name: Build & Publish Release APK
 
-name: Test, Build, Release Demo app to Azure Storgae
-# name: Test, Build and Release apk
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    tags:
+      - '*'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  Gradle:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+    - name: checkout code
+      uses: actions/checkout@v2
+    - name: setup jdk
+      uses: actions/setup-java@v1
       with:
-        java-version: '12.x'
-    - uses: subosito/flutter-action@v1
-      with:
-        channel: 'dev'
-    - run: flutter pub get
-#     - name: 'Run Test(s)'
-#       run: flutter test
-    - name: 'Build Demo Apk'
-      run: flutter clean && flutter build apk --target lib/main.dart --target-platform android-arm --flavor demo
-    - name: 'Upload Apk'
-      uses: wei/curl@v1
-      with:
-        args: -X POST 'https://--your-url---.com/api/UploadApk?filename=release.apk' -F file=@build/app/outputs/apk/demo/release/app-demo-release.apk
+        java-version: 11
+    - name: Make Gradle executable
+      run: chmod +x ./gradlew
+    - name: Build Release APK
+      run: ./gradlew assembleRelease
+    - name: Releasing using Hub
+      uses: kyze8439690/action-release-releaseapk@master
+      env:
+       GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
+       APP_FOLDER: app
