--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   overlay_support: ^1.2.1
   blinking_text: ^1.0.1+2
   firebase_storage:
-  advance_pdf_viewer: ^2.0.0
+  # advance_pdf_viewer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
