--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,12 +24,9 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-apply plugin: 'com.google.gms.google-services'
-
 
 android {
     compileSdkVersion 30
-    //  buildToolsVersion '26.0.2'
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -37,8 +34,8 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.app.pass.moto"
-        minSdkVersion 19
+        applicationId "com.example.calsi"
+        minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -59,11 +56,4 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:28.4.1')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-}
-task generateVersionTxt {
-    doLast {
-        file("./version.txt").text = android.defaultConfig.versionName
-    }
 }
